--- a/index.html
+++ b/index.html
@@ -8,13 +8,28 @@
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
   </head>
+
   <!-- Body er innhold til nettsiden -->
   <body>
     <header>
       <!-- Haeder innhold: Logo, navigasjon, innlogging, søk -->
     </header>
+
     <main>
-      <!-- Main innhold: Hoved informasjon delt i seksjon inndelinger -->
+      <!-- Main innhold: Hoved informasjon delt i seksjon inndelinger --> 
+      <section>
+        <!-- Første seksjon heter hero-section -->
+        <h1>Thomas Nettside</h1>
+        <p>Her kommer jeg til å vise hva jeg lærer på kodeloftet.</p>
+        <h2>Mine hobbyer</h2>
+          <ul>
+            <li>Gaming</li>
+            <li>Spising</li>
+            <li>DND</li>
+          </ul>
+          <img src="https://images.unsplash.com/photo-1743885143645-b28cdaacf8b5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzfHx8ZW58MHx8fHx8" alt="">
+          <img src="toa-heftiba-5jbjClZI8SA-unsplash.jpg" alt="">
+      </section>
     </main>
     <footer>
       <!-- Footer innhold: kreditasjon, navigasjon, vilkår -->
