--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>DND</li>
           </ul>
           <img src="https://images.unsplash.com/photo-1743885143645-b28cdaacf8b5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzfHx8ZW58MHx8fHx8" alt="">
-          <img src="toa-heftiba-5jbjClZI8SA-unsplash.jpg" alt="">
+          <img src="" alt="">
       </section>
     </main>
     <footer>
